tests/new_reordering/new_reordering.exp
Error -------------------------------------------------------------------------------------------------------- a.js:26:1

Cannot compute a type for function because its definition includes references to itself [1]. Please add a type
annotation to this definition [recursive-definition]

   a.js:26:1
   26| function f_na() {
       ^^^^^^^^^^^^^^^

References:
   a.js:27:10
   27|   return f_na();
                ^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- a.js:36:1

Cannot compute a type for `x` because its definition includes references to itself [1]. Please add a type annotation to
this definition [recursive-definition]

   a.js:36:1
   36| x = x;
       ^

References:
   a.js:36:5
   36| x = x;
           ^ [1]


Error -------------------------------------------------------------------------------------------------------- a.js:38:1

The following definitions recursively depend on each other, and Flow cannot compute their types:
 - function [1] depends on other definition [2]
 - function [3] depends on other definition [4]
Please add type annotations to these definitions [definition-cycle]

   a.js:38:1
   38| function a() {
       ^^^^^^^^^^^^ [1]

References:
   a.js:39:10
   39|   return b()
                ^ [2]
   a.js:42:1
   42| function b() {
       ^^^^^^^^^^^^ [3]
   a.js:43:10
   43|   return a()
                ^ [4]



Found 3 errors
